--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,8 @@
     "LFGListSearchPanel_UpdateResultList",
     "UIDropDownMenu_AddButton",
     "UIDropDownMenu_CreateInfo",
-    "UIDropDownMenu_GetText"
+    "UIDropDownMenu_GetText",
+    "SettingsPanel",
+    "ChatFrame_AddMessageEventFilter"
   ]
 }
